--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,3 +15,7 @@ jobs:
         java-version: 1.8
     - name: Build with Maven
       run: mvn -B package --file pom.xml test
+    - uses: actions/upload-artifact@v1
+      with:
+        name: artifact
+        path: target/chess-engine-1.0-SNAPSHOT-jar-with-dependencies.jar  
